[gd_scene load_steps=7 format=3 uid="uid://u5byse278f80"]

[ext_resource type="Script" path="res://ui/scripts/gameOverScreen.gd" id="1_tmgw1"]
[ext_resource type="Texture2D" uid="uid://gkiuu3artph0" path="res://ui/assets/Game_Over_Menu.png" id="2_g3kqk"]
[ext_resource type="Texture2D" uid="uid://11uu7t2ekshk" path="res://ui/assets/MainMenu_button_unpressed.png" id="3_gu5dv"]
[ext_resource type="Texture2D" uid="uid://bbia4tw56raak" path="res://ui/assets/MainMenu_button_pressed.png" id="4_bxjpc"]
[ext_resource type="Texture2D" uid="uid://73bcgskod8qu" path="res://ui/assets/Restart_button_unpressed.png" id="5_wmnct"]
[ext_resource type="Texture2D" uid="uid://dbqpl3k5lnxb8" path="res://ui/assets/Restart_button_pressed.png" id="6_1qhke"]

[node name="GameOverScreen" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_tmgw1")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.291406, 0.270313)
texture = ExtResource("2_g3kqk")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = -376.0
offset_top = -192.0
offset_right = 1174.0
offset_bottom = 592.0
scale = Vector2(0.5, 0.5)
alignment = 1

[node name="menuButton" type="TextureButton" parent="VBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("3_gu5dv")
texture_pressed = ExtResource("4_bxjpc")
stretch_mode = 3
metadata/_edit_use_anchors_ = true

[node name="retryButton" type="TextureButton" parent="VBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("5_wmnct")
texture_pressed = ExtResource("6_1qhke")
stretch_mode = 3
metadata/_edit_use_anchors_ = true

[node name="checkpointButton" type="TextureButton" parent="VBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("5_wmnct")
texture_pressed = ExtResource("6_1qhke")
stretch_mode = 3
metadata/_edit_use_anchors_ = true

[connection signal="button_up" from="VBoxContainer/menuButton" to="." method="_onMenuButtonUp"]
[connection signal="button_up" from="VBoxContainer/retryButton" to="." method="_onRetryButtonUp"]
[connection signal="button_down" from="VBoxContainer/checkpointButton" to="." method="_onCheckpointButtonDown"]
[connection signal="button_up" from="VBoxContainer/checkpointButton" to="." method="_onCheckpointButtonUp"]
